# cargosim_ws

./: .gitignore  README.md
src/cargosim/: CMakeLists.txt  package.xml
src/cargosim/configs/: carto_localization.lua  robot.lua  robot_2d.rviz  robot_2d_nav.rviz  robot_pure_localization.lua
src/cargosim/gazebo/: imu.xacro  kinect.xacro  move.xacro
src/cargosim/launch/: car.launch  cartographer_nav.launch  cartographer_slam.launch  move_base.launch  rosserial_socket.launch
src/cargosim/map/: map.pgm  map.yaml
src/cargosim/param/: base_global_planner_params.yaml  base_local_planner_params.yaml  costmap_common_params.yaml  dwa_local_planner_params.yaml  global_costmap_params.yaml  mpc_local_planner_params_minimum_time.yaml  segment_global_planner_params.yaml  teb_local_planner_params.yaml
src/cargosim/urdf/xacro/: base.urdf.xacro  camera.urdf.xacro  car.urdf.xacro  imu.urdf.xacro  laser.urdf.xacro
src/cargosim/worlds/: house.world  nav.world
src/cartographer_ros/cartographer_ros/cartographer_ros/: msg_conversion.cc
src/cartographer_ros/cartographer_ros/configuration_files/: backpack_3d.lua  demo_2d.rviz
src/segment_global_planner/: CMakeLists.txt
src/segment_global_planner/src/: line_segment.cpp  segment_global_planner.cpp  segment_global_planner.h
